--- a/assets/pkgbuild/git/PKGBUILD
+++ b/assets/pkgbuild/git/PKGBUILD
@@ -7,9 +7,9 @@ _gitname=update-hosts
 pkgdesc="Generate a hosts file based on multiple sources (git)"
 pkgver=r78.f4c7a09
 pkgrel=1
-arch=('i686' 'x86_64')
+arch=('any')
 makedepends=('git')
-depends=('coreutils' 'gawk' 'sed' 'grep')
+depends=()
 optdepends=('curl: Default download client' 'wget: Optional download client')
 provides=('update-hosts')
 conflicts=('update-hosts')
