--- a/assets/pkgbuild/git/PKGBUILD
+++ b/assets/pkgbuild/git/PKGBUILD
@@ -2,17 +2,28 @@
 # Maintainer: pyamsoft <pyam(dot)soft(at)gmail(dot)com>
 ##
 
-pkgname=update-hosts-git
 _gitname=update-hosts
+# shellcheck disable=SC2034
+pkgname=update-hosts-git
+# shellcheck disable=SC2034
 pkgdesc="Generate a hosts file based on multiple sources (git)"
+# shellcheck disable=SC2034
 pkgver=r162.3a6cc03
+# shellcheck disable=SC2034
 pkgrel=1
+# shellcheck disable=SC2034
 arch=('any')
+# shellcheck disable=SC2034
 makedepends=('git')
+# shellcheck disable=SC2034
 depends=()
+# shellcheck disable=SC2034
 optdepends=('curl: Default download client' 'wget: Optional download client')
+# shellcheck disable=SC2034
 provides=('update-hosts')
+# shellcheck disable=SC2034
 conflicts=('update-hosts')
+# shellcheck disable=SC2034
 license=('MIT')
 url="https://github.com/pyamsoft/update-hosts.git"
 
@@ -20,13 +31,19 @@ url="https://github.com/pyamsoft/update-hosts.git"
 # The SHA256 is constantly changing since this is
 # pulled from git so skip the verification check
 ##
+# shellcheck disable=SC2034
 sha256sums=('SKIP')
+# shellcheck disable=SC2034
 source=("${_gitname}::git+${url}#branch=master")
 
 ###############################################################################
 
 pkgver() {
-  cd "$srcdir/$_gitname"
+  # shellcheck disable=SC2154
+  cd "$srcdir/$_gitname" || {
+        msg "Could not cd into $srcdir/$_gitname"
+        return 1
+  }
   # From
   # https://wiki.archlinux.org/index.php/VCS_package_guidelines#The_pkgver.28.29_function
   # If there are no tags then use number of revisions since beginning of the history:
@@ -34,10 +51,16 @@ pkgver() {
 }
 
 package() {
-  local _timer="${_gitname}.timer"
-  local _service="${_gitname}.service"
-  cd "$srcdir/$_gitname"
+  _timer="${_gitname}.timer"
+  _service="${_gitname}.service"
 
+  # shellcheck disable=SC2154
+  cd "$srcdir/$_gitname" || {
+        msg "Could not cd into $srcdir/$_gitname"
+        return 1
+  }
+
+  # shellcheck disable=SC2154
   install -Dm 755 "${_gitname}" "${pkgdir}/usr/bin/${_gitname}"
   install -Dm 644 LICENSE "${pkgdir}/usr/share/licenses/${_gitname}/LICENSE"
   install -Dm 644 "${_timer}" "${pkgdir}/usr/lib/systemd/system/${_timer}"
